@@ -1,3 +1,4 @@
+* Don't check write access on model for button with groups
 * Limit readonly state for xxx2Many
 * Use home directory as default path for database and web root.
 * Add count option on Action Window Domains
